# weather_back

./: pyproject.toml  tox.ini
.github/workflows/: unittests.yml
tests/: conftest.py
tests/unit/: test_routes.py
weather_back/: __server__.py
