[tool.poetry]
name = "weather-back"
version = "0.1.0"
description = ""
authors = ["Jonathan Cook <jcookbme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
requests = "^2.32.3"
pytest = "^8.3.3"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
